--- a/Example/PrebidInternalTestApp/src/main/res/values/strings.xml
+++ b/Example/PrebidInternalTestApp/src/main/res/values/strings.xml
@@ -335,6 +335,7 @@
     <string name="max_mrec_ad_unit_id">0b831dee5ef00774</string>
 
     <!--    Bidding configs-->
+    <!-- maybe those line needs to be deleted -->
     <string name="prebid_account_id_prod">0689a263-318d-448b-a3d4-b02e8a709d9d</string>
     <string name="prebid_account_id_prod_no_bids">1768035c-74d3-4786-b056-13bd41f34bde</string>
     <string name="prebid_account_id_prod_enabled_events">prebid-stored-request-enabled-events</string>
